[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
    "numpy==1.23.3",
    "pandas==1.4.2",
    "scipy==1.13.1",
    "matplotlib==3.8.2",
    "seaborn==0.13.2"
]
name = "regress_analytics"
version = "0.1.0"
authors = [{name = "Salar Mirzaloo", email = "sal.mirzaloo@gmail.com" }]
description = "error analysis tool kit for regression models"
requires-python = ">=3.9.0"
classifiers = [
    "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mmirz94/regression_analytics_package"
"Bug Tracker" = "https://github.com/mmirz94/regression_analytics_package/issues"

[tool.setuptools.packages]
find = { where = ["."], include = ["regress_analytics*"]}
